[metadata]
name = fibonacci-library
version = 0.1
author = Rakesh Kumar
author_email = rakesh0506907@gmail.com
description = A library for generating Fibonacci series
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-rakesh-kr/fibonacci-library
project_urls =
    Source = https://github.com/m-rakesh-kr/fibonacci-library
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
